ordered lookbooks by season & multiple file upload

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,8 +5,8 @@
 
 .image-padding {
   margin-top: 3vh;
-  padding-left: 10%;
-  padding-right: 14%;
+  /* padding-left: 10%; */
+  /* padding-right: 14%; */
 }
 
 .treeview-padding {
