--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -93,20 +93,16 @@ a:hover {
   margin-left: 5%;
 }
 
-/* img:hover {
-  opacity: 1;
-} */
-
 img {
   margin-top: 25px;
   font-size: 21px;
   text-align: center;
 
-  -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
-  -moz-animation: fadein 2s; /* Firefox < 16 */
-  -ms-animation: fadein 2s; /* Internet Explorer */
-  -o-animation: fadein 2s; /* Opera < 12.1 */
-  animation: fadein 2s;
+  -webkit-animation: fadein 1.5s; /* Safari, Chrome and Opera > 12.1 */
+  -moz-animation: fadein 1.5s; /* Firefox < 16 */
+  -ms-animation: fadein 1.5s; /* Internet Explorer */
+  -o-animation: fadein 1.5s; /* Opera < 12.1 */
+  animation: fadein 1.5s;
 }
 
 @keyframes fadein {
@@ -137,8 +133,37 @@ img:hover {
   margin-right: 2%;
 }
 
+.switch-container-lookbook {
+  position: absolute;
+  right: 12px;
+  margin-top: -2.8vh;
+  margin-right: 2%;
+}
+
 .switch-icons {
   /* position: absolute; */
   margin-top: -20px;
   margin-left: 40px;
+}
+
+.slick-slide {
+  visibility: hidden;
+}
+
+.slick-slide.slick-active {
+  visibility: visible;
+}
+
+.season-containers {
+  margin-right: 5%;
+}
+
+.season-pad {
+  margin-top: 10vh;
+}
+
+span {
+  font-family: 'Cardo';
+  font-size: 0.8em;
+  font-variant: small-caps;
 }
