--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -24,7 +24,7 @@ a:hover {
   font-size: large;
   position: fixed;
   left: 50%;
-  top: 3.9%;
+  top: 3.5%;
   transform: translate(-50%, -50%);
 }
 
@@ -141,7 +141,6 @@ img:hover {
 }
 
 .switch-icons {
-  /* position: absolute; */
   margin-top: -20px;
   margin-left: 40px;
 }
@@ -166,4 +165,14 @@ span {
   font-family: 'Cardo';
   font-size: 0.8em;
   font-variant: small-caps;
+}
+
+.user-menu {
+  margin-left: auto;
+  margin-top: 2%;
+}
+
+.user-menu ul li {
+  display: inline-block;
+  padding-left: 5px;
 }
