--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -176,3 +176,14 @@ span {
   display: inline-block;
   padding-left: 5px;
 }
+
+.form-container {
+  margin-top: 10vh;
+  margin-right: 5%;
+  margin-left: 5%;
+}
+
+.button-container {
+  text-align: center;
+  padding-top: 5px;
+}
