profile update page w/ mui forms  & file upload from react to drf

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -224,3 +224,7 @@ span {
   margin-top: -15vh;
   margin-right: 7%;
 }
+
+.profile-edit-avatar {
+  /* figure out how to center the avatar on profile/update */
+}
