--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -228,3 +228,13 @@ span {
 .profile-edit-avatar {
   /* figure out how to center the avatar on profile/update */
 }
+
+.icon-menu {
+  margin-left: auto;
+}
+
+.icon-menu ul li {
+  display: inline-block;
+  padding-left: 5px;
+  padding-right: 5px;
+}
