--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -238,3 +238,18 @@ span {
   padding-left: 5px;
   padding-right: 5px;
 }
+
+.error-message {
+  position: sticky;
+  padding-top: 15px;
+  margin-bottom: -10px;
+  color: red;
+  text-align: center;
+  font-family: Cardo;
+}
+
+.field-error {
+  color: red;
+  text-align: center;
+  font-family: Cardo;
+}
