tweaked user likes serializer

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -289,3 +289,9 @@ span {
   text-align: center;
   font-family: Cardo;
 }
+
+.halfsize {
+  -moz-transform: scale(0.5);
+  -webkit-transform: scale(0.5);
+  transform: scale(0.5);
+}
