--- a/frontend/src/containers/home/styles.css
+++ b/frontend/src/containers/home/styles.css
@@ -22,6 +22,20 @@
   font-family: 'Cardo';
 }
 
+@media screen and (min-width: 768px) {
+  .slick-container-light {
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 0.9rem;
+    font-weight: 400;
+    letter-spacing: 1.5px;
+    padding: 50px;
+    border: 3px dotted;
+    color: #000;
+    font-family: 'Cardo';
+  }
+}
+
 .menu:hover {
   color: #ccc;
   text-decoration: none;
@@ -40,10 +54,32 @@
   font-family: 'Cardo';
 }
 
+@media screen and (min-width: 768px) {
+  .slick-container-dark {
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 0.9rem;
+    font-weight: 400;
+    letter-spacing: 1.5px;
+    padding: 50px;
+    border: 3px dotted;
+    color: rgb(255, 255, 255);
+    font-family: 'Cardo';
+  }
+}
+
 .slick-pad {
   margin-top: 25vh;
   padding-right: 19%;
   padding-left: 15%;
+}
+
+@media screen and (min-width: 768px) {
+  .slick-pad {
+    margin-top: 25vh;
+    padding-right: 35%;
+    padding-left: 30%;
+  }
 }
 
 .slick-slide {
